Use interfaces (Map) instead of implementation types (HashMap) in APIs.
git-svn-id: http://argouml.tigris.org/svn/argouml/trunk@13680 a161b567-7d1e-0410-9ef9-912c70fedb3f